--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
         </ul>
       </div>
     </header>
+    <main>
+      <section>
+       <img src=" https://picsum.photos/id/979/400/400" alt="">
+       <img src=" https://picsum.photos/id/979/400/400" alt="">
+       <img src=" https://picsum.photos/id/979/400/400" alt="">
+       <img src=" https://picsum.photos/id/979/400/400" alt="">
+      </section>
+    </main>
+    </body>
   </body>
 </html>
